--- a/pages/projects/units.html
+++ b/pages/projects/units.html
@@ -1,5 +1,5 @@
 <!---- الكمية --->
-<input type="number" id="kmia">
+<input type="number" id="kmia">123
 <br>
 <!---- سعر الوحدة --->
 <input type="number" id="sear">
