--- a/pages/projects/pands.html
+++ b/pages/projects/pands.html
@@ -1,4 +1,4 @@
-<!---this is pands.html file---->
+<!---this is pands.html file---->123
 <script>
 
     let proId_ = null;
@@ -112,8 +112,6 @@
                 <td>
                     <input id="pandNumber" type="text" placeholder=""
                         style="border: none; background-color: transparent; color: black" />
-
-
                 </td>
                 <td>
                     <input id="pandText" type="text" placeholder=""
