--- a/pages/projects/condations.html
+++ b/pages/projects/condations.html
@@ -1,1 +1,108 @@
-hesham
+123<script>
+  let dataBaseIdForPandCondation =
+    "cond_" + localStorage.getItem("selectedPand");
+  // تهيئة الجدول
+  let PandCondation = new setTableParameter(
+    "condationContaner", // ID of the container element
+    dataBaseIdForPandCondation, // Table ID and database name
+    "PandCondationRaw", // ID of the row template to copy
+    "", // ID of alternate row to show on click
+    true, // Show table header?
+    false, // Add alternate div when row is clicked?
+    true // Start with new row?
+  );
+
+  async function initPandCondationPage() {
+    await renumberPandCondation_();
+  }
+
+  async function renumberPandCondation_() {
+    isTableWatcherEnabled = false; // تعطيل الكود مؤقتًا
+    try {
+
+      while ((await pandsTable.checkProcessRun()) == true) {
+        await delay(50);
+      }
+
+      // تأخير قليل قبل بدء العملية
+      let numbeList = [];
+      let parentId = [];
+      let outPuts = document.querySelectorAll('[id="pandCondationNumber"]');
+
+      // جمع القيم الحالية
+      outPuts.forEach((el) => {
+        numbeList.push(el.value);
+
+        parentId.push(
+          el.parentElement.parentElement.parentElement.parentElement.parentElement.id.replace(
+            "_",
+            ""
+          )
+        );
+      });
+
+      // إعادة الترقيم
+      let noAfterRenumber = reNumber(numbeList); // تأكد أن reNumber تعيد مصفوفة مرقمة حسب ترتيب re
+      let index_ = null;
+
+      // تعيين القيم الجديدة
+      outPuts.forEach((el, index) => {
+        index_ = noAfterRenumber[index];
+        if (parentId[index]) {
+          if (/^[a-zA-Z]{4}\d+/.test(parentId[index])) {
+            // قم بتسجيل القيم لتوضيح التغييرات
+            // تحديث البيانات في قاعدة البيانات
+            dbNoUp_item.keySet(
+              parentId[index].replace("_", ""),
+              "pandCondationNumber",
+              index_
+            );
+            // تعيين القيمة الجديدة للعناصر
+            el.value = index_;
+          }
+        }
+      });
+
+      await delay(200); // تأخير قليل بعد التعيين
+    } catch (error) {
+      console.error("حدث خطأ أثناء إعادة الترقيم:", error);
+    } finally {
+      isTableWatcherEnabled = true; // إعادة تمكين الكود بعد الانتهاء من العملية
+    }
+  }
+</script>
+
+<div id="condationContaner"></div>
+<!-- مكان إضافة الجدول -->
+
+<div DivId id="PandCondationRaw" style="display: none" class="">
+  <table>
+    <thead class="hide-text">
+      <tr>
+        <th id="t_37"></th>
+        <th id="t_413"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <input
+            id="pandCondationNumber"
+            type="text"
+            placeholder=""
+            style="border: none; background-color: transparent; color: black"
+          />
+        </td>
+        <td>
+          <input
+            id="pandCondationText"
+            type="text"
+            placeholder=""
+            readonly
+            style="border: none; background-color: transparent; color: black"
+          />
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
